# serializer version: 1
# name: test_load_inclusion_data[v0-valid]
  list([
    dict({
      'accessibilite': None,
      'adresse': None,
      'antenne': None,
      'code_insee': '59350',
      'code_postal': None,
      'commune': None,
      'complement_adresse': None,
      'courriel': None,
      'date_maj': '2025-01-01',
      'doublons': list([
      ]),
      'horaires_ouverture': None,
      'id': '1',
      'labels_autres': None,
      'labels_nationaux': None,
      'latitude': None,
      'lien_source': None,
      'longitude': None,
      'nom': 'ma structure',
      'presentation_detail': None,
      'presentation_resume': None,
      'rna': None,
      'score_qualite': 0.8,
      'siret': None,
      'site_web': None,
      'source': 'foo',
      'telephone': None,
      'thematiques': None,
      'typologie': None,
    }),
  ])
# ---
# name: test_load_inclusion_data[v0-valid].1
  list([
    dict({
      'adresse': None,
      'code_insee': '59350',
      'code_postal': None,
      'commune': None,
      'complement_adresse': None,
      'contact_nom_prenom': None,
      'contact_public': None,
      'courriel': None,
      'cumulable': None,
      'date_creation': None,
      'date_maj': '2025-01-01',
      'date_suspension': None,
      'formulaire_en_ligne': None,
      'frais': None,
      'frais_autres': None,
      'id': '1',
      'justificatifs': None,
      'latitude': None,
      'lien_source': None,
      'longitude': None,
      'modes_accueil': None,
      'modes_orientation_accompagnateur': None,
      'modes_orientation_accompagnateur_autres': None,
      'modes_orientation_beneficiaire': None,
      'modes_orientation_beneficiaire_autres': None,
      'nom': 'mon service',
      'nombre_semaines': None,
      'page_web': None,
      'pre_requis': None,
      'presentation_detail': None,
      'presentation_resume': None,
      'prise_rdv': None,
      'profils': None,
      'profils_precisions': None,
      'recurrence': None,
      'score_qualite': 0.8,
      'source': 'foo',
      'structure_id': '1',
      'telephone': None,
      'thematiques': None,
      'types': None,
      'volume_horaire_hebdomadaire': None,
      'zone_diffusion_code': None,
      'zone_diffusion_nom': None,
      'zone_diffusion_type': None,
    }),
  ])
# ---
# name: test_load_inclusion_data[v1-invalid-address]
  list([
  ])
# ---
# name: test_load_inclusion_data[v1-invalid-address].1
  list([
  ])
# ---
# name: test_load_inclusion_data[v1-valid]
  list([
    dict({
      'accessibilite_lieu': None,
      'adresse': None,
      'code_insee': '59350',
      'code_postal': None,
      'commune': None,
      'complement_adresse': None,
      'courriel': None,
      'date_maj': '2025-01-01',
      'description': None,
      'doublons': list([
      ]),
      'horaires_accueil': None,
      'id': '1',
      'latitude': None,
      'lien_source': None,
      'longitude': None,
      'nom': 'ma structure',
      'reseaux_porteurs': None,
      'score_qualite': 0.8,
      'siret': None,
      'site_web': None,
      'source': 'foo',
      'telephone': None,
    }),
  ])
# ---
# name: test_load_inclusion_data[v1-valid].1
  list([
    dict({
      'adresse': None,
      'code_insee': '59350',
      'code_postal': None,
      'commune': None,
      'complement_adresse': None,
      'conditions_acces': None,
      'contact_nom_prenom': None,
      'courriel': None,
      'date_maj': '2025-01-01',
      'description': '....................................................................................................',
      'extra': dict({
        'foo': 'bar',
      }),
      'frais': None,
      'frais_precisions': None,
      'horaires_accueil': None,
      'id': '1',
      'latitude': None,
      'lien_mobilisation': None,
      'lien_source': None,
      'longitude': None,
      'mobilisable_par': None,
      'mobilisation_precisions': None,
      'modes_accueil': None,
      'modes_mobilisation': None,
      'nom': 'mon service',
      'nombre_semaines': None,
      'publics': None,
      'publics_precisions': None,
      'score_qualite': 0.8,
      'source': 'foo',
      'structure_id': '1',
      'telephone': None,
      'thematiques': None,
      'type': None,
      'volume_horaire_hebdomadaire': None,
      'zone_eligibilite': None,
    }),
  ])
# ---
